# lacreisaude-desafiobackend

./: .gitignore  README.md  pyproject.toml
desafiobackend/: manage.py
desafiobackend/appointments/: admin.py  models.py  serializers.py  urls.py
desafiobackend/appointments/apis/: v1.py
desafiobackend/appointments/migrations/: 0001_initial.py  0002_initial.py  0003_alter_appointment_professional.py
desafiobackend/appointments/tests/: factories.py  test_api_v1.py
desafiobackend/desafiobackend/: asgi.py  settings.py  urls.py  wsgi.py
desafiobackend/users/: admin.py  managers.py  models.py  serializers.py  urls.py
desafiobackend/users/apis/: v1.py
desafiobackend/users/migrations/: 0001_initial.py  0002_alter_user_managers_remove_user_phone.py
desafiobackend/users/tests/: factories.py  test_api_v1.py
